--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="miembro">
         <h2 class="nombre">Dante</h2>
-        <p class="descripcion">Dante, conocido por su habilidad para desaparecer cuando es su turno de pagar la cuenta.</p>
+        <p class="descripcion">Dante, Es un manipulador tan inteligente que cambiará de personalidad con tal de conseguir lo que quiere.</p>
         <a href="https://www.instagram.com/dante_sequeira_17/?utm_source=ig_web_button_share_sheet" target="_blank">Mi Instagram</a>
     </div>
     <div class="miembro">
