--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h1>Los Insanos</h1>
     <div class="miembro">
         <h2 class="nombre">Dilan</h2>
-        <p class="descripcion">Dilan, El tegnologico del grupo !asegura bien tus cuentas bancarias¡.</p>
+        <p class="descripcion">Dilan, El tegnologico del grupo ¡asegura bien tus cuentas bancarias!.</p>
         <a href="https://www.instagram.com/dilanenriquez50/?utm_source=ig_web_button_share_sheet" target="_blank">Mi Instagram</a>
     </div>
     <div class="miembro">
