--- a/index.html
+++ b/index.html
@@ -20,31 +20,40 @@
             100% { background-color: #2200ff; }
         }
 
-        .video-background {
+        .video-container {
             position: fixed;
-            right: 0;
-            bottom: 0;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+        .video-background {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             min-width: 100%;
             min-height: 100%;
+            object-fit: cover;
+        }
+
+        .black-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
             z-index: -1;
         }
 
         .content {
             position: relative;
             z-index: 1;
-            animation: contentFadeIn 2s ease-in-out;
             padding-bottom: 50px;
-        }
-
-        @keyframes contentFadeIn {
-            from {
-                opacity: 0;
-                transform: scale(0.9);
-            }
-            to {
-                opacity: 1;
-                transform: scale(1);
-            }
         }
 
         h1 {
@@ -121,10 +130,13 @@
     </style>
 </head>
 <body>
-    <video autoplay muted loop class="video-background">
-        <source src="video.mp4" type="video/mp4">
-        Tu navegador no soporta videos HTML5.
-    </video>
+    <div class="video-container">
+        <video autoplay muted loop class="video-background">
+            <source src="video.mp4" type="video/mp4">
+            Tu navegador no soporta videos HTML5.
+        </video>
+        <div class="black-overlay"></div>
+    </div>
     <div class="content">
         <h1>Los Insanos</h1>
         <div class="miembro">
