--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los Insanos</title>
+    <meta name="description" content="Conoce a los miembros del grupo Los Insanos, cada uno con su propia personalidad y talento.">
+    <meta name="keywords" content="Los Insanos, grupo, personalidades, talentos">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -117,6 +119,24 @@
             text-decoration: underline;
         }
 
+        .sound-button {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 2;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .sound-button:focus {
+            outline: none;
+        }
+
         @media (max-width: 768px) {
             .miembro {
                 margin: 10px;
@@ -131,7 +151,7 @@
 </head>
 <body>
     <div class="video-container">
-        <video autoplay muted loop class="video-background">
+        <video autoplay muted loop class="video-background" id="bg-video">
             <source src="video.mp4" type="video/mp4">
             Tu navegador no soporta videos HTML5.
         </video>
@@ -178,5 +198,20 @@
             <p class="nombre">Creador: Dilan_E</p>
         </div>
     </div>
+    <button class="sound-button" onclick="toggleSound()" aria-label="Toggle Sound">Sonido: Apagado</button>
+    <script>
+        const video = document.getElementById('bg-video');
+        const soundButton = document.querySelector('.sound-button');
+
+        function toggleSound() {
+            if (video.muted) {
+                video.muted = false;
+                soundButton.textContent = 'Sonido: Encendido';
+            } else {
+                video.muted = true;
+                soundButton.textContent = 'Sonido: Apagado';
+            }
+        }
+    </script>
 </body>
 </html>
